<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <!-- TODO: 左側から順に、下記の View を配置していき、そのまとまりを画面上部に揃える -->

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <RelativeLayout
            android:id="@+id/RelativeLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:paddingTop="10dp" >

            <ImageView
                android:id="@+id/ImageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/frame"
                android:contentDescription="@string/profile_img"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ImageView1"
                android:layout_centerHorizontal="true"
                android:text="@string/profile" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RelativeLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/RelativeLayout2"
            android:layout_alignTop="@+id/RelativeLayout2"
            android:layout_toRightOf="@+id/RelativeLayout2" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/View1" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:drawableRight="@android:drawable/ic_menu_manage"
                    android:text="@string/name"
                    android:textSize="20sp" />
            </RelativeLayout>

            <View
                android:id="@+id/View1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                android:layout_marginBottom="10dp"
                android:background="#393939" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/View1" >

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/call"
                    android:scaleType="fitXY"
                    android:src="@android:drawable/ic_menu_call" />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/send"
                    android:scaleType="fitXY"
                    android:src="@android:drawable/ic_menu_send" />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/share"
                    android:scaleType="fitXY"
                    android:src="@android:drawable/ic_menu_share" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
    <!-- 1. プロフィール画像(ic_launcher)と、それを囲う四角形の枠、その下に プロフィール と書かれた文字 -->
    <!-- 2. 1. の右側の上半分に、ニックネームの表示と、そのさらに右端に設定アイコン -->
    <!-- 3. 1. の右側の下半分に、電話ボタン、メール送信ボタン、共有ボタンの 3 つを均等割付 -->
    <!-- 4. 2. と 3. の間に分割線 -->
    <!-- 条件: 3. 以外では LinearLayout を使ってはならない -->
    <!-- Hint: 1. 画像の表示には、android:src="@drawable/ic_launcher" 属性を使います -->
    <!-- Hint: 2. 画像を表示しながら、ボタンとして機能させる特別なボタンの View があります -->
    <!-- Hint: 3. 区切り線を引く専用の UI はありません。背景色を android:background="#393939" にして、区切り線ぽく扱う工夫が必要です -->
    <!-- Hint: 4. 均等割付するボタンの画像は、左から android:src="@android:drawable/ic_menu_call", android:src="@android:drawable/ic_menu_send", android:src="@android:drawable/ic_menu_share" です -->
    <!-- TODO: 上記のまとまりの下に、幅 1 dp の区切り線を引く -->

    <View
        android:id="@+id/View2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/RelativeLayout1"
        android:background="#393939" />

    <!-- TODO: 左側から順に、下記の View を配置していき、そのまとまりを画面下部に揃える -->

    <RelativeLayout
        android:id="@+id/RelativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <RelativeLayout
            android:id="@+id/RelativeLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:drawableTop="@drawable/ic_launcher"
                android:text="@string/menu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/menu"
                android:background="@drawable/badge"
                android:text="@string/number" />
        </RelativeLayout>

        <View
            android:id="@+id/View3"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/RelativeLayout5"
            android:layout_alignRight="@+id/RelativeLayout5"
            android:layout_alignTop="@+id/RelativeLayout5"
            android:background="#393939" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/View3"
            android:layout_alignTop="@+id/View3"
            android:layout_toLeftOf="@+id/View4"
            android:layout_toRightOf="@+id/View3"
            android:paddingLeft="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableLeft="@drawable/ic_launcher"
                android:gravity="center_vertical"
                android:text="@string/submit" />
        </RelativeLayout>

        <View
            android:id="@+id/View4"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/RelativeLayout6"
            android:layout_alignLeft="@+id/RelativeLayout6"
            android:layout_alignTop="@+id/RelativeLayout6"
            android:background="#393939" />

        <RelativeLayout
            android:id="@+id/RelativeLayout6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/RelativeLayout5"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/RelativeLayout5"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:drawableTop="@drawable/ic_launcher"
                android:gravity="center_horizontal"
                android:text="@string/recently" />
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:id="@+id/View5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/RelativeLayout4"
        android:background="#393939" />
    <!-- 1. ic_launcher のアイコンと、その下に メニュー の文字を表示し、アイコンの右肩に 30 と書かれたバッチを表示するボタン -->
    <!-- 2. 幅 1dp の 縦の区切り線 -->
    <!-- 3. ic_launcher のアイコンと、その右に つぶやきを投稿 の文字を表示しているボタン -->
    <!-- 4. 幅 1dp の 縦の区切り線 -->
    <!-- 5. ic_launcher のアイコンと、その下に 最近 の文字を表示しているボタン -->
    <!-- 条件: LinearLayout は一切使用しない -->
    <!-- Hint: 1. ボタンですが Button は使いません -->
    <!-- Hint: 2. ボタン用の背景は android:background="@drawable/button_state_list" にします -->
    <!-- Hint: 3. バッチ用の背景は android:background="@drawable/badge" にします -->
    <!-- Hint: 4. TextView には、文字の隣に drawable を表示する属性があります -->


    <!-- TODO: 上記の View の上に、お知らせを表示する View を配置する -->
    <!-- Hint: 1. お知らせを表示する View の背景は android:background="@drawable/notify_button_state_list" にします -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/View5"
        android:background="@drawable/notify_button_state_list"
        android:padding="10dp"
        android:text="@string/notice"
        android:textColor="#ffffff" />

</RelativeLayout>